--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
         "@heroicons/vue": "^2.2.0",
         "@inertiajs/vue3": "^2.2.19",
         "@melloware/coloris": "^0.25.0",
+        "@tiptap/extension-link": "^3.15.1",
+        "@tiptap/extension-table": "^3.15.2",
+        "@tiptap/extension-table-cell": "^3.15.2",
+        "@tiptap/extension-table-header": "^3.15.2",
+        "@tiptap/extension-table-row": "^3.15.2",
+        "@tiptap/extension-text-align": "^3.15.1",
+        "@tiptap/extension-underline": "^3.15.1",
+        "@tiptap/starter-kit": "^3.15.1",
+        "@tiptap/vue-3": "^3.15.1",
         "@vitejs/plugin-vue": "^6.0.2",
         "alpinejs": "^3.15.3",
         "autoprefixer": "^10.4.22",
